// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\\def multiple simple arguments render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Untitled
      </h1>
      

      <div
        class="engrafo-metadata"
      >
        
  
        <div
          class="authors"
        >
          
    
        </div>
        
  
        <div
          class="engrafo-metadata-custom"
        />
        

      </div>
      

      <div
        class="engrafo-body"
      >
        

        <p>
          one one two two three three four four five five six six seven seven after
        </p>
        

      </div>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`\\def with control seq suffix renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Untitled
      </h1>
      

      <div
        class="engrafo-metadata"
      >
        
  
        <div
          class="authors"
        >
          
    
        </div>
        
  
        <div
          class="engrafo-metadata-custom"
        />
        

      </div>
      

      <div
        class="engrafo-body"
      >
        

        <blockquote>
          

          <p>
            <span>
              hello
            </span>
             
            <code>
              world
            </code>
          </p>
          

        </blockquote>
        

      </div>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`simple \\def without arguments render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Untitled
      </h1>
      

      <div
        class="engrafo-metadata"
      >
        
  
        <div
          class="authors"
        >
          
    
        </div>
        
  
        <div
          class="engrafo-metadata-custom"
        />
        

      </div>
      

      <div
        class="engrafo-body"
      >
        

        <p>
          bar
        </p>
        

      </div>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
